Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#6079 closed defect (fixed)

speedhq crash

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: shq crash SIGSEGV
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

with 32bit build

https://samples.mplayerhq.hu/V-codecs/shq0.avi

(gdb) r -i f/shq0.avi -f null -
Starting program: /media/sdb1/ffmpeg/ffmpeg_g -i f/shq0.avi -f null -
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
ffmpeg version 3.2.git Copyright (c) 2000-2017 the FFmpeg developers
  built with gcc 5.3.0 (Ubuntu 5.3.0-3ubuntu1~14.04) 20151204
  configuration: --disable-ffprobe --disable-ffserver --disable-ffplay --enable-gpl
  libavutil      55. 43.100 / 55. 43.100
  libavcodec     57. 72.100 / 57. 72.100
  libavformat    57. 62.100 / 57. 62.100
  libavdevice    57.  2.100 / 57.  2.100
  libavfilter     6. 69.100 /  6. 69.100
  libswscale      4.  3.101 /  4.  3.101
  libswresample   2.  4.100 /  2.  4.100
  libpostproc    54.  2.100 / 54.  2.100
Guessed Channel Layout for Input Stream #0.1 : 4.0
Input #0, avi, from 'f/shq0.avi':
  Duration: 00:00:10.01, start: 0.000000, bitrate: 14397 kb/s
    Stream #0:0: Video: speedhq (SHQ0 / 0x30514853), yuv420p(bt470bg/unknown/unknown), 1280x720, 11343 kb/s, 29.97 fps, 29.97 tbr, 29.97 tbn, 29.97 tbc
    Stream #0:1: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, 4.0, s16, 3072 kb/s
[New Thread 0xb7596b40 (LWP 15004)]
[New Thread 0xb6d95b40 (LWP 15005)]
[New Thread 0xb6594b40 (LWP 15006)]
[New Thread 0xb5d93b40 (LWP 15007)]
[New Thread 0xb5592b40 (LWP 15008)]
[New Thread 0xb4d91b40 (LWP 15009)]
[New Thread 0xb4590b40 (LWP 15010)]
[New Thread 0xb3d8fb40 (LWP 15011)]
[New Thread 0xb358eb40 (LWP 15012)]
[New Thread 0xb2d8db40 (LWP 15013)]
[New Thread 0xb258cb40 (LWP 15014)]
[New Thread 0xb1d8bb40 (LWP 15015)]
[New Thread 0xb158ab40 (LWP 15016)]
[New Thread 0xb0d89b40 (LWP 15017)]
[New Thread 0xb0588b40 (LWP 15018)]
[New Thread 0xafd87b40 (LWP 15019)]
[New Thread 0xaf586b40 (LWP 15020)]
[New Thread 0xaed85b40 (LWP 15021)]
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf57.62.100
    Stream #0:0: Video: wrapped_avframe, yuv420p, 1280x720, q=2-31, 200 kb/s, 29.97 fps, 29.97 tbn, 29.97 tbc
    Metadata:
      encoder         : Lavc57.72.100 wrapped_avframe
    Stream #0:1: Audio: pcm_s16le, 48000 Hz, 4.0, s16, 3072 kb/s
    Metadata:
      encoder         : Lavc57.72.100 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (speedhq (native) -> wrapped_avframe (native))
  Stream #0:1 -> #0:1 (pcm_s16le (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help

Program received signal SIGSEGV, Segmentation fault.
ff_clear_block_sse () at libavcodec/x86/blockdsp.asm:56
56	CLEAR_BLOCK 1, 1
(gdb) bt
#0  ff_clear_block_sse () at libavcodec/x86/blockdsp.asm:56
(gdb) 

Attachments (1)

0001-speedhq-Align-blocks-variable-properly.patch (897 bytes ) - added by Sesse 10 years ago.

Download all attachments as: .zip

Change History (7)

comment:1 by Sesse, 10 years ago

Thanks. Can you try this patch?

in reply to:  1 comment:2 by ami_stuff, 10 years ago

Replying to Sesse:

Thanks. Can you try this patch?

Yes it fixed the crash, thx.

comment:3 by Sesse, 10 years ago

Resolution: fixed
Status: newclosed

comment:4 by James, 10 years ago

Analyzed by developer: set
Component: undeterminedavcodec
Version: unspecifiedgit-master

comment:5 by Carl Eugen Hoyos, 10 years ago

Analyzed by developer: unset
Keywords: shq crash SIGSEGV added
Priority: normalimportant

comment:6 by Elon Musk, 10 years ago

Analyzed by developer: set
Reproduced by developer: set
Note: See TracTickets for help on using tickets.